--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">robot-talk-story</string>
+    <string name="search">搜索</string>
+    <string name="search_hint">想听什么故事呢？</string>
+
+    <string name="competitive_products">精品专辑</string>
+    <string name="recent_story">最新故事</string>
+
+
+    <string name="query_all">查看全部>></string>
 </resources>
