--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -5,8 +5,17 @@
 
     <string name="competitive_products">精品专辑</string>
     <string name="products">专辑</string>
+    <string name="story">故事</string>
     <string name="recent_story">最新故事</string>
 
 
     <string name="query_all">查看全部>></string>
+
+    <string name="header_hint_refresh_normal">Pull to refresh</string>
+    <string name="header_hint_refresh_ready">Release to refresh</string>
+    <string name="header_hint_refresh_loading">Refreshing&#8230;</string>
+    <string name="header_hint_refresh_time">Time：</string>
+    <string name="footer_hint_load_normal">Load more</string>
+    <string name="footer_hint_load_ready">Release to load more</string>
+
 </resources>
